--- a/.github/workflows/E2E.yaml
+++ b/.github/workflows/E2E.yaml
@@ -78,7 +78,7 @@ jobs:
           if (!($githubOwner)) {
               $githubOwner = "$ENV:GITHUB_REPOSITORY_OWNER"
           }
-          $orgmap = Get-Content -path (Join-Path "." "e2eTests\orgmap.json') -encoding UTF8 -raw | ConvertFrom-Json
+          $orgmap = Get-Content -path (Join-Path "." "e2eTests\orgmap.json") -encoding UTF8 -raw | ConvertFrom-Json
           if ($orgmap.PSObject.Properties.Name -eq $githubOwner) {
             $githubOwner = $orgmap."$githubOwner"
           }
