--- a/.github/workflows/E2E.yaml
+++ b/.github/workflows/E2E.yaml
@@ -120,7 +120,7 @@ jobs:
           $modulePath = Join-Path "." "e2eTests\e2eTestHelper.psm1" -resolve
           Import-Module $modulePath -DisableNameChecking
           SetTokenAndRepository -github -githubOwner '${{ needs.Check.outputs.githubowner }}' -token '${{ Secrets.E2EPAT }}' -repository "microsoft/AL-Go"
-          $maxParallel = '${{ needs.Check.outputs.maxParallel }}'
+          $maxParallel = [int]'${{ needs.Check.outputs.maxParallel }}'
 
           $testrunsJson = @{
               "matrix" = @{
