--- a/.github/workflows/E2E.yaml
+++ b/.github/workflows/E2E.yaml
@@ -202,7 +202,7 @@ jobs:
 
   TestAlGo:
     runs-on: [ ubuntu-latest ]
-    needs: [ Check, SetupRepositories ]
+    needs: [ Check, SetupRepositories, Analyze ]
     strategy: ${{ fromJson(needs.Analyze.outputs.testruns) }}
     steps:
       - uses: actions/checkout@v3
